border collapse removed for more flat design. Buttons re-aligned with table. Need to make search and dropdown fixed

--- a/Public/buttons.scss
+++ b/Public/buttons.scss
@@ -1,5 +1,11 @@
 .dropdown {
 height: 45px;
+padding-left: 0;
+}
+
+.dropdown-wrapper {
+	padding-left: 0;
+	padding-right: 0;
 }
 
 #bg-nested-dropdown {
