--- a/Public/header.scss
+++ b/Public/header.scss
@@ -13,8 +13,8 @@
 
 .header{
   text-align: center;
-  margin-left: 12%;
-  margin-right: 10%;
+  margin-left: 13%;
+ 
 }
 
 .header p {
