--- a/Public/menuTable.css
+++ b/Public/menuTable.css
@@ -1,5 +1,5 @@
 table.menu-table {
-  border-collapse: separate;
+
   background: #fff;
   -moz-border-radius: 5px;
   -webkit-border-radius: 5px;
